fix: adjust vertical alignment; fix psg, pmz, pmg variants

--- a/src/messages/models/Template/styles/text/css/logo--alternative.css
+++ b/src/messages/models/Template/styles/text/css/logo--alternative.css
@@ -24,7 +24,3 @@
     display: inline-block;
     margin-right: 0.6rem;
 }
-
-.message__content {
-    display: inline-block;
-}
